--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 is file lists all individuals having contributed content to the repository.
 
 Ramzi Hkiri <6257@holbertonstudents.com>
+Ahmed Toukebri <6495@holbertonstudents.com>
